<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fsmk-SC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="schedule">Schedule :</string>
    <string name="date">05-12-2014</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="time">4.00 \n \t\t to \n 5.00</string>
    <string name="events">Publish Speaker</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="aboutVolunteers">About Volunteers</string>
    <string name="description">Details :</string>
    <string name="venue">Venue :</string>
    <string name="event_name">EVENT NAME</string>
    <string name="speaker_name">Speaker Name :</string>
    <string name="title_activity_volunteers">VolunteersActivity</string>
    
    
    <string name="TitleVolunteers">VOLUNTEERS</string>
    <string name="TitleFoodVolunteer">FoodVolunteer :</string>
    <string name="FoodVolunteerName">FoodVolunteerName</string>
    <string name="FoodVolunteerContact">FoodVolunteerContact</string>
    <string name="TitleHostelVolunteer">HostelVolunteer :</string>
    <string name="HostelVolunteerName">HostelVolunteerName</string>
    <string name="HostelVolunteerContact">HostelVolunteerContact</string>
    <string name="FreeSoftwareFreeSociety">Free software, Free society</string>
    <string name="FreeSoftwareFreeinFreedom">Free Software Free as in freedom</string>
  

</resources>
