<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VolunteersActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtTitleVolunteers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleVolunteers" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtTitleFoodVolunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleFoodVolunteer" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtFoodVolunteerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FoodVolunteerName" />

            <TextView
                android:id="@+id/txtFoodVolunteerContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FoodVolunteerContact" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtTitleHostelVolunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleHostelVolunteer" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtHostelVolunteerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HostelVolunteerName" />

            <TextView
                android:id="@+id/txtHostelVolunteerContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HostelVolunteerContact" />
        </TableRow>
    </TableLayout>

</LinearLayout>