<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
   android:background="@drawable/customline"
    android:orientation="horizontal" >

    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:layout_marginLeft="4dp"
        android:textSize="20px"
        android:text="@string/date"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.38"
        android:textSize="20px"
        android:text="@string/events"
        
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="20px"
        android:layout_weight="0.18"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:textColor="#000000"/>

</LinearLayout>